--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,18 +11,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@hapi/hapi": "^21.3.10",
+    "@hapi/hapi": "^20.2.1",
+    "crdb-pg": "^1.4.1",
     "db-migrate": "^1.0.0-beta.27",
     "db-migrate-cockroachdb": "^5.7.2",
     "dotenv": "^16.4.5",
+    "hapi-router-es": "^5.1.3",
     "http-status-codes": "^2.3.0",
-    "pg": "^8.12.0",
-    "crdb-pg": "*"
+    "pg": "8.11.5",
+    "sql-template-tag": "^5.2.1"
   },
   "pnpm": {
     "overrides": {
       "pg-native": "^3.0.1",
-      "pg": "^8.12.0"
+      "pg": "^8.11.5"
     }
   }
 }
